--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,5 @@
 @import url('http://fonts.cdnfonts.com/css/gochi-hand');
+@import url('https://fonts.googleapis.com/css2?family=Gochi+Hand&display=swap');
 
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
