farex new update

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -222,7 +222,7 @@ input.white[type=submit]:hover{
 	margin: 0 auto 33px;
 	padding: 200px 0 0; 
 	position:relative;
-	background: url(../images/bg_header.png) no-repeat 50% 0;
+	background: url(../images/Head.png) no-repeat 50% 0;
 }
 .events #header,
 .about #header,
