--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -1,4 +1,4 @@
-body {
+.my-carousel-container {
     height: 600px;
     margin: 0;
     display: grid;
@@ -8,7 +8,7 @@ body {
     justify-items: center;
   }
   
-  main#carousel {
+  main#my-carousel {
     grid-row: 1 / 2;
     grid-column: 1 / 8;
     width: 100vw;
@@ -59,43 +59,43 @@ body {
     background-color: #e9ff70;
   }
   
-  input:nth-of-type(1) {
+  .mycarousel-input:nth-of-type(1) {
     grid-column: 2 / 3;
     grid-row: 2 / 3;
   }
-  input:nth-of-type(1):checked ~ main#carousel {
+  .mycarousel-input:nth-of-type(1):checked ~ main#my-carousel {
     --position: 1;
   }
   
-  input:nth-of-type(2) {
+  .mycarousel-input:nth-of-type(2) {
     grid-column: 3 / 4;
     grid-row: 2 / 3;
   }
-  input:nth-of-type(2):checked ~ main#carousel {
+  .mycarousel-input:nth-of-type(2):checked ~ main#my-carousel {
     --position: 2;
   }
   
-  input:nth-of-type(3) {
+  .mycarousel-input:nth-of-type(3) {
     grid-column: 4 /5;
     grid-row: 2 / 3;
   }
-  input:nth-of-type(3):checked ~ main#carousel {
+  .mycarousel-input:nth-of-type(3):checked ~ main#my-carousel {
     --position: 3;
   }
   
-  input:nth-of-type(4) {
+  .mycarousel-input:nth-of-type(4) {
     grid-column: 5 / 6;
     grid-row: 2 / 3;
   }
-  input:nth-of-type(4):checked ~ main#carousel {
+  .mycarousel-input:nth-of-type(4):checked ~ main#my-carousel {
     --position: 4;
   }
   
-  input:nth-of-type(5) {
+  .mycarousel-input:nth-of-type(5) {
     grid-column: 6 / 7;
     grid-row: 2 / 3;
   }
-  input:nth-of-type(5):checked ~ main#carousel {
+  .mycarousel-input:nth-of-type(5):checked ~ main#my-carousel {
     --position: 5;
   }
   
