--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -25,7 +25,7 @@
     pointer-events: none;
   }
   
-  div.item {
+  .item {
     position: absolute;
     width: 300px;
     height: 400px;
@@ -38,23 +38,23 @@
     z-index: calc((var(--position) - var(--abs)));
   }
   
-  div.item:nth-of-type(1) {
+  .my-carousel-item:nth-of-type(1) {
     --offset: 1;
     background-color: #90f1ef;
   }
-  div.item:nth-of-type(2) {
+  .my-carousel-item:nth-of-type(2) {
     --offset: 2;
     background-color: #ff70a6;
   }
-  div.item:nth-of-type(3) {
+  .my-carousel-item:nth-of-type(3) {
     --offset: 3;
     background-color: #ff9770;
   }
-  div.item:nth-of-type(4) {
+  .my-carousel-item:nth-of-type(4) {
     --offset: 4;
     background-color: #ffd670;
   }
-  div.item:nth-of-type(5) {
+  .my-carousel-item:nth-of-type(5) {
     --offset: 5;
     background-color: #e9ff70;
   }
