--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -63,7 +63,7 @@
     grid-column: 2 / 3;
     grid-row: 2 / 3;
   }
-  .mycarousel-input:nth-of-type(1):checked ~ main#my-carousel {
+  .mycarousel-input:nth-of-type(1):checked ~ #my-carousel {
     --position: 1;
   }
   
@@ -71,7 +71,7 @@
     grid-column: 3 / 4;
     grid-row: 2 / 3;
   }
-  .mycarousel-input:nth-of-type(2):checked ~ main#my-carousel {
+  .mycarousel-input:nth-of-type(2):checked ~ #my-carousel {
     --position: 2;
   }
   
@@ -79,7 +79,7 @@
     grid-column: 4 /5;
     grid-row: 2 / 3;
   }
-  .mycarousel-input:nth-of-type(3):checked ~ main#my-carousel {
+  .mycarousel-input:nth-of-type(3):checked ~ #my-carousel {
     --position: 3;
   }
   
@@ -87,7 +87,7 @@
     grid-column: 5 / 6;
     grid-row: 2 / 3;
   }
-  .mycarousel-input:nth-of-type(4):checked ~ main#my-carousel {
+  .mycarousel-input:nth-of-type(4):checked ~ #my-carousel {
     --position: 4;
   }
   
@@ -95,7 +95,7 @@
     grid-column: 6 / 7;
     grid-row: 2 / 3;
   }
-  .mycarousel-input:nth-of-type(5):checked ~ main#my-carousel {
+  .mycarousel-input:nth-of-type(5):checked ~ #my-carousel {
     --position: 5;
   }
   
